Fix alignment issue with appbar

--- a/src/scss/appbar.scss
+++ b/src/scss/appbar.scss
@@ -3,7 +3,7 @@
 .appbar {
   width: 100%;
   height: 65px;
-  line-height: 60px;
+  line-height: 65px;
   overflow: hidden;
   color: #000;
   &.fixed,
